# UDUNITS-2

./: .gitignore  .travis.yml  ANNOUNCEMENT  BACKLOG  CHANGE_LOG  CI-commit.sh  CMakeCPackOptions.cmake  CMakeLists.txt  COPYRIGHT  DOI  Doxyfile.developer  FAIR-stack.uxf  GRAMMAR.md  LICENSE  Makefile.am  Makefile.in  README  README.rst  Vagrantfile  acceptance_test_fc16_64.sh  acceptance_test_linux.sh  acceptance_test_precise32.sh  acceptance_test_win32.sh  aclocal.m4  angle-frequency-sequence.uxf  angularVelocity-frequency-classes.uxf  appveyor.yml  build.gradle  check  check-commit  commit  config-cmake.h  config.cmake  config.h.cmake  config.h.in  configure  configure.ac  configure.scan  deliver.sh  dev-makefile  (+18 more)
.github/workflows/: OnPush.yml  check-push.yml  tests.yml  win-build.yml
conda.recipe/: bld.bat  meta.yaml
delivery/: .gitignore  CI-commit.sh  acceptance_test.cmd  acceptance_test_linux.sh  publish.sh  release-vars.sh
delivery/puppet/: precise32_run.pp  ubuntu-devel.pp
expat/: .gitignore  Makefile.am  Makefile.in  winconfig.h  xmlparse.c  xmlrole.c  xmltok.c
lib/: .exrc  .gitignore  CMakeLists.txt  DimPow.c  DimPow.h  DimVec.c  DimVec.h  Makefile.am  Makefile.in  SI.xml  a  a.c  a.html  a.txt  c99_snprintf.c  converter.c  converter.h  core.c  en_US.UTF-8.txt  error.c  formatter.c  idToUnitMap.c  idToUnitMap.h  latin1.txt  map.c.obsolete  map.h.obsolete  parser.c  parser.h  parser.y  prefix.c  prefix.h  scanner.c  scanner.h  scanner.l  status.c  systemMap.c  systemMap.h  testDimVec.c  testUnits-1.c  testUnits.c  (+28 more)
lib/xmlFailures/: Makefile  Makefile.am  Makefile.in
lib/xmlSuccesses/: Makefile.am  Makefile.in
lib/xmlTests/: Makefile  Makefile.am  Makefile.in
prog/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  XGetopt.c  XGetopt.h  udunits2.c  udunits2prog.html  udunits2prog.info  udunits2prog.texi
puppet/: centos-devel.pp  fedora19_64.pp  precise32.pp  ubuntu-devel.pp
test/: .gitignore  Makefile.am  Makefile.in  buddy.host  dana.host  flip.host  gilda.host  imogene.host  lenny.host  mort.host  tweety.host  zasu.host  zero.host
udunits-1/: .gitignore  Makefile.am  Makefile.in
win/: README.txt
win/build-vs11/: .gitignore  combine.bat  udunits.sln
win/build-vs11/cunit/: cunit.vcxproj  cunit.vcxproj.filters
win/build-vs11/expat/: expat.vcxproj  expat.vcxproj.filters
win/build-vs11/lib/: lib.vcxproj  lib.vcxproj.filters
win/build-vs11/port/: port.vcxproj  port.vcxproj.filters
win/build-vs11/prog/: prog.vcxproj  prog.vcxproj.filters
win/build-vs11/test/: test.vcxproj  test.vcxproj.filters
win/cunit/src/: Automated.c  Basic.c  Console.c  TestDB.c  TestRun.c  Util.c
win/port/include/win/: getopt.h  glob.h  math.h
win/port/src/: getopt.c  glob.c  regex.c  regexec.c  search.c
